documentation security warning

--- a/OpenBioC/app/templates/app/documentation.html
+++ b/OpenBioC/app/templates/app/documentation.html
@@ -56,9 +56,11 @@
 
                                         <strong>Important:</strong> If you have downloaded these files as an unregistered user. The execution will <strong>not</strong> generate a report.<br>
 
-                                        <h5><strong>SECURITY WARNING: Always execute the downloaded scripts in a sandboxed environment! There is absolutely no guarantee regarding the security and safety of these scripts. Openbio.eu does not take any responsibility on damages caused by the execution of scripts provided by the platform.</strong><h5>
-
-
+                                        <div class="row col s12">
+                                            <div class="card-panel red lighten-1" style="padding:10px">
+                                                <h5><strong>SECURITY WARNING: Always execute the downloaded scripts in a sandboxed environment! There is absolutely no guarantee regarding the security and safety of these scripts. Openbio.eu does not take any responsibility on damages caused by the execution of scripts provided by the platform.</strong><h5>
+                                            </div>
+                                        </div>
 
                                     </div>
                                 </div>
