--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -20,7 +20,7 @@
                             ng-show="!tools_info_editable">/<span ng-bind="tools_info_edit"></span></span>
                     </h5>
                     <small class="form-text text-muted" ng-show="!tools_info_editable">
-                        <a ng-click="interlink({type: 'u', username: tool_info_username})">u/<span ng-bind="tool_info_username"></span></a>, created at <span
+                        created by <a ng-click="interlink({type: 'u', username: tool_info_username})">u/<span ng-bind="tool_info_username"></span></a>, created at <span
                             ng-bind="tool_info_created_at"></span>
                         {% verbatim %}
                         <a href="/platform/t/{{tools_info_name}}/{{tools_info_version}}/{{tools_info_edit}}">link</a>
@@ -381,7 +381,7 @@
                                 ng-bind="workflow_info_edit"></span></span>
                     </h5>
                     <small class="form-text text-muted" ng-show="!workflows_info_editable">
-                        <a ng-click="interlink({type: 'u', username: workflows_info_username})">u/<span ng-bind="workflows_info_username"></span></a>
+                        created by <a ng-click="interlink({type: 'u', username: workflows_info_username})">u/<span ng-bind="workflows_info_username"></span></a>
                         <span>, created at <span ng-bind="workflow_info_created_at"></span></span>
                         {% verbatim %}
                         <a href="/platform/w/{{workflow_info_name}}/{{workflow_info_edit}}">link</a>
@@ -880,8 +880,12 @@
                                     ng-click="tools_search_show_item(tools_info_forked_from)"><span
                                         ng-bind="tools_info_forked_from | tool_label"></span></a></span>
                             <span>USED IN 86 WFs</span> -->
-                        <a ng-click="interlink({type: 'u', username: references_username})">u/<span ng-bind="references_username"></span></a>
-                        <span>, created at <span ng-bind="references_created_at"></span></span>
+                        added from <a ng-click="interlink({type: 'u', username: references_username})">u/<span ng-bind="references_username"></span></a>
+                        <span>, created at <span ng-bind="references_created_at"></span>
+                        {% verbatim %}
+                        <a href="/platform/r/{{references_name}}">link</a>
+                        {% endverbatim %}
+                        </span>
                     </small>
                     <div class="card blue-grey darken-1">
                         <div class="card-content" style="background-color: #f0f8ff;">
@@ -1060,9 +1064,9 @@
     </div>
 
     <!-- USERS RIGHT PANEL -->
-    <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
-    <!-- ------------------------------------------------- Users Right Panel ----------------------------------------------------------------------------- -->
-    <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
+    <!-- ------------------------------------------------------ -->
+    <!-- ---- Users Right Panel ------------------------------- -->
+    <!-- ------------------------------------------------------ -->
     <div class="faster" id="userDataDiv" style="display: none;">
         <div class="card blue-grey lighten-4 rightPanelTitleCard">
             <div class="card-content rightPanelTitleContent">
@@ -1078,7 +1082,10 @@
                     <div class="collapsible-header">
                         <i class="material-icons arrow">keyboard_arrow_right</i>
                         <i class="material-icons">info</i>
-                        User Info
+                        User Info for &nbsp; <span ng-bind="user_username"></span>
+                        {% verbatim %}
+                        &nbsp;<a href="/platform/u/{{user_username}}">link</a>
+                        {% endverbatim %}
                     </div>
                     <div class="collapsible-body">
                         <form class="col s12">
@@ -1176,7 +1183,11 @@
                         <div class="valign-wrapper">
                             <img src="/static/app/images/konstantina/img_avatar.png" alt=""
                                 class="circle avatarForumQuestion">
-                            <small>Asked by <a ng-click="interlink({type: 'u', username: qa_username})">u/<span ng-bind="qa_username"></span></a> on <span ng-bind="qa_created_at"></span><span>, </span><a ng-click="interlink({type: 'c', id: qa_comment_id})">c/<span ng-bind="qa_comment_id"></span></a></small>
+                            <small>Asked by <a ng-click="interlink({type: 'u', username: qa_username})">u/<span ng-bind="qa_username"></span></a> on <span ng-bind="qa_created_at"></span><span>, </span><a ng-click="interlink({type: 'c', id: qa_comment_id})">c/<span ng-bind="qa_comment_id"></span></a>
+                            {% verbatim %}
+                            <a href="/platform/c/{{qa_comment_id}}">link</a>
+                            {% endverbatim %}
+                            </small>
                         </div>
                         <div>
                             <h5 style="margin-top:9px; margin-bottom:9px;"><span ng-bind-html="qa_title"></span></h5>
