changed also the documentation #109

--- a/OpenBioC/app/templates/app/documentation.html
+++ b/OpenBioC/app/templates/app/documentation.html
@@ -55,6 +55,7 @@
                                         To access this information simply search for the Report id (i.e. <strong>7Lt2o</strong>) on the main search. Then you can click the relevant report that appears. <br>
 
                                         <strong>Important:</strong> If you have downloaded these files as an unregistered user. The execution will <strong>not</strong> generate a report.<br>
+                                        <strong>Troubleshooting:</strong> In environments where curl cannot validate the SSL certificate of openbio.eu, you can pass the option <code>--insecure</code> to <code>executor.py</code><br>
 
                                         <div class="row col s12">
                                             <div class="card-panel red lighten-1" style="padding:10px">
