documentation Cancer link renamed to Return

--- a/OpenBioC/app/templates/app/documentation.html
+++ b/OpenBioC/app/templates/app/documentation.html
@@ -28,7 +28,7 @@
                             <div class="card">
                                 <div class="card-content">
                                     <div class="row right">
-                                        <a class="waves-effect waves-teal btn-flat" ng-click="documentation_cancel_clicked()">Cancel</a>
+                                        <a class="waves-effect waves-teal btn-flat" ng-click="documentation_cancel_clicked()">Return</a>
                                     </div>
                                     <blockquote><span class="card-title">Execute a Workflow</span></blockquote>
                                     <div class="row">
