add new docs and info(dissemination) in the static site

--- a/OpenBioC/static/templates/static/index_static_en.html
+++ b/OpenBioC/static/templates/static/index_static_en.html
@@ -92,7 +92,7 @@ http://www.tooplate.com/view/2098-health
                          <li><a href="#workpackages" class="smoothScroll">Workpackages</a></li>
 						 <li><a href="#partners" class="smoothScroll">Partners</a></li>
                          <li><a href="#news" class="smoothScroll">News</a></li>
-                         <li><a href="#news" class="smoothScroll">Dissemination</a></li>
+                         <li><a href="#dissemination" class="smoothScroll">Dissemination</a></li>
                          <li><a href="#mycontact" class="smoothScroll">Contact</a></li>
 						 <li><a href="/gr" class="smoothScroll">GR</a></li>
 						 <!--<li><a href="/static/static/static/gr/index.html" class="smoothScroll"><img src="/static/static/static/images/grflag.png" id="grflag" style=" max-width:10%;  max-height:10%;" /></a></li>
@@ -236,7 +236,7 @@ http://www.tooplate.com/view/2098-health
                          <div class="team-thumb wow fadeInUp" data-wow-delay="0.2s">
 								<div class="team-info">
                                         <div class="team-contact-info">
-												<p>WP1. User requirements and system specifications</p>
+												<p> WP1. User requirements and system specifications</p>
 												<p>&emsp;&emsp;&emsp;(Μ1 &#8211; Μ9)</p>
 												<p>WP2. Development of an environment for the synthesis of scientific workflows</p>
 												<p>&emsp;&emsp;&emsp;(Μ6 &#8211; Μ36)</p>
@@ -263,7 +263,7 @@ http://www.tooplate.com/view/2098-health
                          <div class="team-thumb wow fadeInUp" data-wow-delay="0.4s">
                                    <div class="team-info">
                                         <div class="team-contact-info">
-                                             <p>D1. User requirements and initial prototype implementation</p>
+                                             <p><a href="/static/static/static/docs/deliverables/EE1.pdf" target="_blank">D1. User requirements and initial prototype implementation</a></p>
                                              <p>D2. Building a scientific workflow management system with virtual computing technology</p>
                                              <p>D3. Building a computer-supported collaborative research system</p>
 											 <p>D4. Models and mechanisms for the semantic representation and extraction of research objects</p>
@@ -348,7 +348,7 @@ http://www.tooplate.com/view/2098-health
 					{
 					  background: none;
 					  color: #222;
-					  font-size: 2.3em;
+					  font-size: 1em;
 					  text-shadow: none;
 					  margin-top: 30px;
 					}
@@ -578,6 +578,47 @@ http://www.tooplate.com/view/2098-health
 		  
      </section>
 
+	  <!-- DISSEMINATION -->
+     <section id="dissemination" data-stellar-background-ratio="1">
+          <div class="container">
+               <div class="row">
+
+                    <div class="col-md-6 col-sm-6">
+                         <div class="about-info">
+                              <h2 class="wow fadeInUp" data-wow-delay="0.1s">Dissemination</h2>
+                         </div>
+                    </div>
+
+                    <div class="clearfix"></div>
+
+                    <div class="col-md-6 col-sm-6">
+                         <div class="team-thumb wow fadeInUp" data-wow-delay="0.4s">
+                                   <div class="team-info">
+                                        <div class="team-contact-info">
+										<label><a href="https://bibe2019.ics.forth.gr/" target="_blank">IEEE BIBE 2019</a></label>
+											<p><a href="/static/static/static/docs/dissemination/BIBE2019/6pages.pdf" target="_blank">Short Paper</a></p>
+                                            <p><a href="/static/static/static/docs/dissemination/BIBE2019/8pages.pdf" target="_blank">Paper</a></p>
+											<br>
+										<label><a href="https://hscbio.wordpress.com/conferences-when/2019-2/" target="_blank">H.bioinfo 2019</a></label>
+											<p><a href="/static/static/static/docs/dissemination/HBIO2019/asbtract.pdf" target="_blank">Abstract</a></p>
+											<br>
+										<label><a href="https://www.open-bio.org/events/bosc/" target="_blank">BOSC 2019</a></label>
+                                             <p><a href="/static/static/static/docs/dissemination/BOSC2019/abstract.pdf" target="_blank">Abstract</a></p>
+                                             <p><a href="/static/static/static/docs/dissemination/BOSC2019/poster.pdf" target="_blank">Poster</a></p>
+											 <br>
+                                     </div>
+                                   </div>
+
+                         </div>
+                    </div>					
+               </div>
+          </div>
+     </section>
+	 
+	 
+	 <br>
+     <br>
+	 <br>
 
      <!-- CONTACT FORM -->
      <section id="mycontact" data-stellar-background-ratio="3">
