--- a/OpenBioC/static/templates/static/index_static_gr.html
+++ b/OpenBioC/static/templates/static/index_static_gr.html
@@ -94,7 +94,7 @@ http://www.tooplate.com/view/2098-health
                          <li><a href="#workpackages" class="smoothScroll">Εργασίες & Παραδοτέα</a></li>
 						 <li><a href="#partners" class="smoothScroll">Φορείς Υλοποίησης</a></li>
                          <li><a href="#news" class="smoothScroll">Νέα</a></li>
-                         <li><a href="#news" class="smoothScroll">Διάχυση & Δημοσιότητα</a></li>
+                         <li><a href="#dissemination" class="smoothScroll">Διάχυση & Δημοσιότητα</a></li>
                          <li><a href="#mycontact" class="smoothScroll">Επικοινωνία</a></li>
                          <li><a href="/" class="smoothScroll">EN</a></li>
                          <!--<li><a href="/static/static/static/en/index.html" class="smoothScroll"><img src="/static/static/static/images/enflag.png" id="enflag" /></a></li>-->
@@ -388,7 +388,7 @@ http://www.tooplate.com/view/2098-health
 					{
 					  background: none;
 					  color: #222;
-					  font-size: 2.3em;
+					  font-size: 1em;
 					  text-shadow: none;
 					  margin-top: 30px;
 					}
@@ -618,6 +618,48 @@ http://www.tooplate.com/view/2098-health
 		  
      </section>
 
+	 
+	  <!-- DISSEMINATION -->
+     <section id="dissemination" data-stellar-background-ratio="1">
+          <div class="container">
+               <div class="row">
+
+                    <div class="col-md-6 col-sm-6">
+                         <div class="about-info">
+                              <h2 class="wow fadeInUp" data-wow-delay="0.1s">Διάχυση & Δημοσιότητα</h2>
+                         </div>
+                    </div>
+
+                    <div class="clearfix"></div>
+
+                    <div class="col-md-6 col-sm-6">
+                         <div class="team-thumb wow fadeInUp" data-wow-delay="0.4s">
+                                   <div class="team-info">
+                                        <div class="team-contact-info">
+										<label><a href="https://bibe2019.ics.forth.gr/" target="_blank">IEEE BIBE 2019</a></label>
+											<p><a href="/static/static/static/docs/dissemination/BIBE2019/6pages.pdf" target="_blank">Σύντομη Δημοσίευση</a></p>
+                                            <p><a href="/static/static/static/docs/dissemination/BIBE2019/8pages.pdf" target="_blank">Δημοσίευση</a></p>
+											<br>
+										<label><a href="https://hscbio.wordpress.com/conferences-when/2019-2/" target="_blank">H.bioinfo 2019</a></label>
+											<p><a href="/static/static/static/docs/dissemination/HBIO2019/asbtract.pdf" target="_blank">Περίληψη Δημοσίευσης</a></p>
+											<br>
+										<label><a href="https://www.open-bio.org/events/bosc/" target="_blank">BOSC 2019</a></label>
+                                             <p><a href="/static/static/static/docs/dissemination/BOSC2019/abstract.pdf" target="_blank">Περίληψη Δημοσίευσης</a></p>
+                                             <p><a href="/static/static/static/docs/dissemination/BOSC2019/poster.pdf" target="_blank">Παρουσίαση πινακίδας εισήγησης (poster) </a></p>
+											 <br>
+                                     </div>
+                                   </div>
+
+                         </div>
+                    </div>					
+               </div>
+          </div>
+     </section>
+	 
+	 
+	 <br>
+     <br>
+	 <br>
 	 
 	
 
