add new info in dissemination

--- a/OpenBioC/static/templates/static/index_static_en.html
+++ b/OpenBioC/static/templates/static/index_static_en.html
@@ -595,6 +595,9 @@ http://www.tooplate.com/view/2098-health
                          <div class="team-thumb wow fadeInUp" data-wow-delay="0.4s">
                                    <div class="team-info">
                                         <div class="team-contact-info">
+										<label><a>SCIENTIFIC RETREAT FORTH 2019</a></label>
+											<p><a href="/static/static/static/docs/dissemination/SCIENTIFICRETREAT2019/abstract.pdf" target="_blank">Abstract</a></p>
+											<br>
 										<label><a href="https://bibe2019.ics.forth.gr/" target="_blank">IEEE BIBE 2019</a></label>
 											<p><a href="/static/static/static/docs/dissemination/BIBE2019/6pages.pdf" target="_blank">Short Paper</a></p>
                                             <p><a href="/static/static/static/docs/dissemination/BIBE2019/8pages.pdf" target="_blank">Paper</a></p>
