--- a/OpenBioC/static/templates/static/index_static_gr.html
+++ b/OpenBioC/static/templates/static/index_static_gr.html
@@ -636,6 +636,9 @@ http://www.tooplate.com/view/2098-health
                          <div class="team-thumb wow fadeInUp" data-wow-delay="0.4s">
                                    <div class="team-info">
                                         <div class="team-contact-info">
+										<label>SCIENTIFIC RETREAT FORTH 2019</label>
+											<p><a href="/static/static/static/docs/dissemination/SCIENTIFICRETREAT2019/abstract.pdf" target="_blank">Περίληψη Δημοσίευσης</a></p>
+											<br>
 										<label><a href="https://bibe2019.ics.forth.gr/" target="_blank">IEEE BIBE 2019</a></label>
 											<p><a href="/static/static/static/docs/dissemination/BIBE2019/6pages.pdf" target="_blank">Σύντομη Δημοσίευση</a></p>
                                             <p><a href="/static/static/static/docs/dissemination/BIBE2019/8pages.pdf" target="_blank">Δημοσίευση</a></p>
