--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -179,6 +179,13 @@
 	<script src="/static/app/vis.min.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="stylesheet" href="/static/app/vis.min.css" />
 
+	<!-- dagre 0.7.4 -->
+	<script src="/static/app/dagre-0.7.4/dist/dagre.min.js"> </script>
+	<script src="/static/app/cytoscape-dagre.js"></script>
+
+	<!-- Discourse js -->
+	<script src="/static/app/discourse.js"></script>
+
 
 </head>
 
@@ -290,6 +297,16 @@
 		{% endcomment %}
 
 	</div> <!-- angular controler -->
+
+    <!-- tippy popup for cydisc cytoscape discourse -->
+    <div id="tippy-popup" style="display: none;">
+      <span class="fa fa-user fa-2x"></span>
+      <br>
+      User: <b><p id="tippy-author-name"></p></b>
+      Text: <p id="tippy-text"></p>
+      Date: <p id="tippy-date">15/02/2019</p>
+    </div>
+
 
 	<script type="text/javascript" src="/static/app/OBC.js" charset="utf-8"></script>
 
